program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -1891,9 +1891,9 @@ msgid "&Copy command line to clipboard"
 msgstr "&Copiar línea de comandos al portapapeles"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Create a new multiplex settings tab for each directory"
-msgstr "Crear nuevo ajuste de multiplexado para cada archivo"
+msgstr "&Crear una nueva pestaña de ajustes de multiplexado para cada directorio"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:508
 #, no-c-format
@@ -2031,7 +2031,7 @@ msgstr "&Generar sub-capítulos"
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:138
 #, no-c-format
 msgid "&Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "&Manejar todos los archivos de todos los directorios como una sola lista de archivos"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:672
 #, no-c-format
@@ -3533,9 +3533,9 @@ msgstr "Añadiendo archivos de capítulos"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:135
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:136
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Adding directories via drag & drop or copy & paste"
-msgstr "Añadir archivos mediante arrastrar y soltar o copiar y pegar"
+msgstr "Añadir directorios mediante arrastrar y soltar o copiar y pegar"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2199
 #, no-c-format
@@ -5231,9 +5231,9 @@ msgid "Create a WebM compliant file."
 msgstr "Crear archivo compatible WebM."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:797
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Create a new multiplex settings tab for each directory"
-msgstr "Crear nuevo ajuste de multiplexado para cada archivo"
+msgstr "Crear una nueva pestaña de ajustes de multiplexado para cada directorio"
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:224
 #, no-c-format
@@ -6938,7 +6938,7 @@ msgstr "Para una explicación más extensa del enlace de archivos/segmentos y su
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:49
 #, no-c-format
 msgid "For each directory a new multiplex settings tab can be created. All files from that directory will be added to this new tab. The configuration about dragging & dropping/copying & pasting files is ignored in this case."
-msgstr ""
+msgstr "Para cada directorio se puede crear una nueva pestaña de ajustes de multiplexado. Todos los archivos de ese directorio se añadirán a esta nueva pestaña. La configuración de arrastrar y soltar/copiar y pegar archivos se ignora en este caso."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:385
 #, no-c-format
@@ -7205,7 +7205,7 @@ msgstr "Secuencias básicas HEVC/H.265"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:796
 #, no-c-format
 msgid "Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Manejar todos los archivos de todos los directorios como una sola lista de archivos"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:444
 #, no-c-format
@@ -13155,7 +13155,7 @@ msgstr "El proceso será cancelado."
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:48
 #, no-c-format
 msgid "The program can collect all files from all directories in a single list. What happens with that list is determined by how dragging & dropping/copying & pasting files is configured."
-msgstr ""
+msgstr "El programa puede recoger todos los archivos de todos los directorios en una sola lista. Lo que ocurre con esa lista está determinado por la configuración de arrastrar y soltar/copiar y pegar archivos."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:295
 #, no-c-format
@@ -15154,9 +15154,9 @@ msgid "When a file is added its name is scanned."
 msgstr "Cuando un archivo es añadido su nombre es analizado."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2202
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When adding d&irectories via drag && drop/copy && paste:"
-msgstr "Al añadir archivos mediante &arrastrar && soltar/copiar && pegar:"
+msgstr "Al añadir d&irectorios mediante arrastrar y soltar o copiar y pegar"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2200
 #, no-c-format
@@ -15204,9 +15204,9 @@ msgid "When the user adds such a file the track's language input is set to the l
 msgstr "Cuando el usuario añade un archivo de entrada el idioma de la pista se establece con respecto a la propiedad del idioma del archivo origen."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:441
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When the user drags & drops directories from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "Cuando el usuario arrastra y deja caer archivos desde una aplicación externa sobre la herramienta de combinación de la GUI puede optar por diferentes acciones."
+msgstr "Cuando el usuario arrastra y suelta directorios desde una aplicación externa a la herramienta de multiplexado, la GUI puede realizar diferentes acciones."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:565
 #, no-c-format
@@ -15518,7 +15518,7 @@ msgstr "Debe seleccionar un archivo existente."
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:137
 #, no-c-format
 msgid "You've dragged & dropped or copied & pasted at least one directory. There are several ways to handle them:"
-msgstr ""
+msgstr "Has arrastrado y soltado o copiado y pegado al menos un directorio. Hay varias maneras de manejarlos:"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
