program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -1814,9 +1814,9 @@ msgid "&Copy command line to clipboard"
 msgstr "&Copier la ligne de commande dans le presse-papiers"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Create a new multiplex settings tab for each directory"
-msgstr "Créer un nouvel onglet de paramètres pour chaque fichier"
+msgstr "&Créer un nouvel onglet de paramètres de multiplexage pour chaque dossier"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:508
 #, no-c-format
@@ -1954,7 +1954,7 @@ msgstr "&Générer des sous-chapitres…"
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:138
 #, no-c-format
 msgid "&Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "&Assembler tous les fichiers de tous les dossiers en une liste unique de fichiers"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:672
 #, no-c-format
@@ -3456,9 +3456,9 @@ msgstr "Ajout des fichiers de chapitres"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:135
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:136
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Adding directories via drag & drop or copy & paste"
-msgstr "Ajout de fichiers glissés-déposés ou copiés-collés"
+msgstr "Ajout de dossiers par glisser-déposer ou copier-coller"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2199
 #, no-c-format
@@ -5154,9 +5154,9 @@ msgid "Create a WebM compliant file."
 msgstr "Crée un fichier conforme au format WebM."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:797
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Create a new multiplex settings tab for each directory"
-msgstr "Créer un nouvel onglet de paramètres pour chaque fichier"
+msgstr "Créer un nouvel onglet de paramètres de multiplexage pour chaque dossier"
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:224
 #, no-c-format
@@ -6861,7 +6861,7 @@ msgstr "Lire la documentation de mkvmerge pour une explication détaillée sur l
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:49
 #, no-c-format
 msgid "For each directory a new multiplex settings tab can be created. All files from that directory will be added to this new tab. The configuration about dragging & dropping/copying & pasting files is ignored in this case."
-msgstr ""
+msgstr "Pour chaque dossier, un nouvel onglet de paramètres de multiplexage peut être créé. Tous les fichiers de ce dossier seront ajoutés à cet onglet. La configuration de glisser-déposer ou copier-coller est ignorée dans ce cas."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:385
 #, no-c-format
@@ -7128,7 +7128,7 @@ msgstr "Flux élémentaires HEVC/H.265"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:796
 #, no-c-format
 msgid "Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Assembler tous les fichiers de tous les dossiers en une liste unique de fichiers"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:444
 #, no-c-format
@@ -12117,7 +12117,7 @@ msgstr "L'éditeur de chapitres doit connaître le jeu de caractères qu'un fich
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:556
 #, no-c-format
 msgid "The character sets in the 'selected' list on the right will be shown at the top of all the character set drop-down boxes in the program."
-msgstr "Les jeux de caractères dans la liste « Sélection » sur la droite seront affichés tout en haut des listes déroulantes dans le programme."
+msgstr "Les jeux de caractères dans la liste « Sélection » sur la droite seront affichés tout en haut des listes déroulantes dans le programme."
 
 #: src/merge/mkvmerge.cpp:1951
 #, no-c-format
@@ -12345,7 +12345,7 @@ msgstr "Le temps de fin doit être plus grand que le temps de début."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:550
 #, no-c-format
 msgid "The entries in the 'selected' list on the right will be shown at the top of all the drop-down boxes with countries and regions in the program."
-msgstr "Les entrées dans la liste « Sélection » à droite seront affichées en haut de toutes les listes déroulantes des pays et régions du logiciel."
+msgstr "Les entrées dans la liste « Sélection » à droite seront affichées en haut de toutes les listes déroulantes des pays et régions du logiciel."
 
 #: src/output/p_avc_hevc_es.cpp:98
 #, no-c-format
@@ -12853,7 +12853,7 @@ msgstr "La balise de langue est valide."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
 #, no-c-format
 msgid "The languages in the 'selected' list on the right will be shown at the top of all the language drop-down boxes in the program."
-msgstr "Les langues dans la liste « Sélection » sur la droite seront affichées tout en haut des listes déroulantes dans le programme."
+msgstr "Les langues dans la liste « Sélection » sur la droite seront affichées tout en haut des listes déroulantes dans le programme."
 
 #: src/common/kax_file.cpp:225
 #, no-c-format
@@ -13081,7 +13081,7 @@ msgstr "Cette opération va être abandonnée."
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:48
 #, no-c-format
 msgid "The program can collect all files from all directories in a single list. What happens with that list is determined by how dragging & dropping/copying & pasting files is configured."
-msgstr ""
+msgstr "Le programme peut collecter tous les fichiers de tous les dossiers en une liste unique de fichiers. Ce que devient cette liste est déterminé de la façon dont le glisser-déposer ou le copier-coller est configuré."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:295
 #, no-c-format
@@ -13500,7 +13500,7 @@ msgstr "La valeur peut être exprimée en un nombre à virgule (par ex. 12,345) 
 #: src/mkvtoolnix-gui/merge/input.cpp:571
 #, no-c-format
 msgid "The value can be negative, but keep in mind that any frame whose timestamp is negative after this calculation is dropped."
-msgstr "La valeur peut être négative, mais une trame dont l'horodatage est négatif après ce calcul est éliminée."
+msgstr "La valeur peut être négative, mais toute trame dont l'horodatage est négatif après ce calcul est éliminée."
 
 #: src/common/bcp47.cpp:520
 #, no-c-format
@@ -15042,7 +15042,7 @@ msgstr "Sous-titres WebVTT"
 #: src/mkvtoolnix-gui/forms/header_editor/action_for_dropped_files_dialog.h:116
 #, no-c-format
 msgid "What do you want to do with the files you've dragged & dropped here?"
-msgstr "Que faut-il faire des fichiers glissés-déposés ici ?"
+msgstr "Que faut-il faire des fichiers glissés-déposés ici ?"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_appending_files_dialog.h:167
 #, no-c-format
@@ -15067,7 +15067,7 @@ msgstr "Ce qui est saisi ici est ajouté à la suite de toutes les autres option
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2278
 #, no-c-format
 msgid "When &dropping files:"
-msgstr "En déposant des fichiers :"
+msgstr "En déposant des fichiers :"
 
 #: src/mkvtoolnix-gui/forms/watch_jobs/tab.h:303
 #, no-c-format
@@ -15080,9 +15080,9 @@ msgid "When a file is added its name is scanned."
 msgstr "Quand un fichier est ajouté, son nom est examiné."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2202
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When adding d&irectories via drag && drop/copy && paste:"
-msgstr "En déposant &des fichiers glissés-déposés ou copiés-collés :"
+msgstr "En ajoutant des dossiers par glisser-déposer ou copier-coller :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2200
 #, no-c-format
@@ -15130,14 +15130,14 @@ msgid "When the user adds such a file the track's language input is set to the l
 msgstr "Quand l'utilisateur ajoute un tel fichier, la langue de la piste est réglée sur la propriété langue du fichier source."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:441
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When the user drags & drops directories from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "Quand des fichiers d'une application externe sont glissés-déposés sur l'outil de multiplexage, l'interface peut effectuer différentes actions."
+msgstr "Quand l'utilisateur glisse-dépose des dossiers depuis une application externe dans l'outil de multiplexage, l'interface peut effectuer différentes actions."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:565
 #, no-c-format
 msgid "When the user drags & drops files from an external application onto a header editor tab the GUI can take different actions."
-msgstr "Lorsqu'un l'utilisateur glisse-dépose des fichiers à partir d'une application externe sur un onglet d'éditeur d'entêtes, l'interface dispose de différentes actions possibles."
+msgstr "Lorsqu'un l'utilisateur glisse-dépose des fichiers à partir d'une application externe sur un onglet d'éditeur d'entêtes, l'interface peut effectuer différentes actions."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:430
 #, no-c-format
@@ -15338,7 +15338,7 @@ msgstr "Oui"
 #: src/mkvtoolnix-gui/forms/header_editor/attachments_page.h:110
 #, no-c-format
 msgid "You can add attachments by clicking on the button below, by right-clicking on a node in the tree and selecting \"Add attachments\" from the popup menu or by dragging & dropping files here or onto the tree."
-msgstr "Il est possible d'ajouter des pièces jointes en cliquant sur le bouton ci-dessous, par clic droit sur un noeud de l'arborescence puis en sélectionnant « Ajouter des pièces jointes » dans le menu contextuel, ou en glissant-déposant des fichiers ici ou sur l'arborescence."
+msgstr "Il est possible d'ajouter des pièces jointes en cliquant sur le bouton ci-dessous, par clic droit sur un nœud de l'arborescence puis en sélectionnant « Ajouter des pièces jointes » dans le menu contextuel, ou en glissant-déposant des fichiers ici ou sur l'arborescence."
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:225
 #, no-c-format
@@ -15444,7 +15444,7 @@ msgstr "Un fichier existant doit être sélectionné."
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:137
 #, no-c-format
 msgid "You've dragged & dropped or copied & pasted at least one directory. There are several ways to handle them:"
-msgstr ""
+msgstr "Au moins un dossier a été ajouté par glisser-déposer ou copier-coller. Il existe plusieurs solutions pour le(s) manipuler :"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
