program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1837,9 +1837,9 @@ msgid "&Copy command line to clipboard"
 msgstr "&Copiar linha de comando para a área de transferência"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Create a new multiplex settings tab for each directory"
-msgstr "Criar uma nova aba de configurações de multiplexação para cada arquivo"
+msgstr "&Criar uma nova guia de configurações de multiplexação para cada diretório"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:508
 #, no-c-format
@@ -1977,7 +1977,7 @@ msgstr "&Gerar subcapítulos"
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:138
 #, no-c-format
 msgid "&Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Manipular todos os arquivos de todos os diretórios como uma única lista de arquivos"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:672
 #, no-c-format
@@ -3479,9 +3479,9 @@ msgstr "Adicionando arquivos de capítulo"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:135
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:136
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Adding directories via drag & drop or copy & paste"
-msgstr "Adicionar arquivos via arrastar-e-soltar ou copiar-e-colar"
+msgstr "Adicionando diretórios por meio de arrastar e soltar ou copiar e colar"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2199
 #, no-c-format
@@ -5177,9 +5177,9 @@ msgid "Create a WebM compliant file."
 msgstr "Criar um arquivo compatível com WebM."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:797
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Create a new multiplex settings tab for each directory"
-msgstr "Criar uma nova aba de configurações de multiplexação para cada arquivo"
+msgstr "Criar uma nova guia de configurações de multiplexação para cada diretório"
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:224
 #, no-c-format
@@ -6884,7 +6884,7 @@ msgstr "Para uma melhor explicação sobre ligação de arquivos/segmentos e sua
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:49
 #, no-c-format
 msgid "For each directory a new multiplex settings tab can be created. All files from that directory will be added to this new tab. The configuration about dragging & dropping/copying & pasting files is ignored in this case."
-msgstr ""
+msgstr "Para cada diretório, uma nova guia de configurações de multiplexação pode ser criada. Todos os arquivos desse diretório serão adicionados a essa nova guia. A configuração sobre arrastar e soltar/copiar e colar arquivos é ignorada neste caso."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:385
 #, no-c-format
@@ -7151,7 +7151,7 @@ msgstr "Fluxos elementares HEVC/H.265"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:796
 #, no-c-format
 msgid "Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "Manipular todos os arquivos de todos os diretórios como uma única lista de arquivos"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:444
 #, no-c-format
@@ -9391,9 +9391,9 @@ msgid "Nu&mber of entries to create:"
 msgstr "Nú&mero de entradas a serem criadas:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2156
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Number of &recently used entries to remember:"
-msgstr "&Número de entradas para renumerar:"
+msgstr "Número de entradas usadas &recentemente para lembrar:"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:314
 #, no-c-format
@@ -13099,7 +13099,7 @@ msgstr "O processo será abortado."
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:48
 #, no-c-format
 msgid "The program can collect all files from all directories in a single list. What happens with that list is determined by how dragging & dropping/copying & pasting files is configured."
-msgstr ""
+msgstr "O programa pode coletar todos os arquivos de todos os diretórios em uma única lista. O que acontece com essa lista é determinado pela configuração de arrastar e soltar/copiar e colar arquivos."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:295
 #, no-c-format
@@ -13681,7 +13681,7 @@ msgstr "Este arquivo Ogg/OGM contém capítulos, mas eles não puderam ser anali
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:280
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "Isso afeta funções como o seletor de diretórios de destino usados recentemente no multiplexador."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:378
 #, no-c-format
@@ -15098,9 +15098,9 @@ msgid "When a file is added its name is scanned."
 msgstr "Quando um arquivo é adicionado, seu nome é analisado."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2202
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When adding d&irectories via drag && drop/copy && paste:"
-msgstr "Ao a&dicionar arquivos através de arrastar-e-soltar/copiar-e-colar:"
+msgstr "Ao adicionar d&iretórios por meio de arrastar e soltar/copiar e colar:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2200
 #, no-c-format
@@ -15148,9 +15148,9 @@ msgid "When the user adds such a file the track's language input is set to the l
 msgstr "Quando o usuário adiciona esse arquivo, a entrada de idioma da faixa é definida para a propriedade e idioma do arquivo de origem."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:441
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When the user drags & drops directories from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "Quando o usuário arrasta e solta arquivos de um aplicativo externo na ferramenta de multiplexação, a GUI pode executar ações diferentes."
+msgstr "Quando o usuário arrasta e solta diretórios de um aplicativo externo na ferramenta de multiplexação, a GUI pode realizar ações diferentes."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:565
 #, no-c-format
@@ -15462,7 +15462,7 @@ msgstr "Você deve selecionar um arquivo existente."
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:137
 #, no-c-format
 msgid "You've dragged & dropped or copied & pasted at least one directory. There are several ways to handle them:"
-msgstr ""
+msgstr "Você arrastou e soltou ou copiou e colou pelo menos um diretório. Existem várias maneiras de lidar com eles:"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
