--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-08-13 15:09+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>, 2019-2022\n"
+"Last-Translator: Andrei Stepanov, 2018-2022\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -15974,7 +15974,7 @@ msgstr "размер {0}"
 #: src/input/subtitles.cpp:422
 #, no-c-format
 msgid "ssa_reader: Invalid format. Could not find the \"Format\" line in the \"[Events]\" section."
-msgstr "Считыватель SSA: неверный формат. Не найдена строка \"Format\" в секции \"[Events]\"."
+msgstr "Считыватель SSA: неверный формат. Не найдена строка \"Format\" в разделе \"[Events]\"."
 
 #: src/input/r_matroska.cpp:139
 #, no-c-format
