program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -13032,7 +13032,7 @@ msgstr "İşlem iptal edilecektir."
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:48
 #, no-c-format
 msgid "The program can collect all files from all directories in a single list. What happens with that list is determined by how dragging & dropping/copying & pasting files is configured."
-msgstr ""
+msgstr "Program, tüm dizinlerdeki tüm dosyaları tek bir listede toplayabilir. Bu listede ne olacağı, dosyaların sürüklenmesi ve bırakılması/kopyalanması ve yapıştırılmasının nasıl yapılandırıldığına göre belirlenir."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:295
 #, no-c-format
@@ -15029,9 +15029,9 @@ msgid "When a file is added its name is scanned."
 msgstr "Bir dosya eklendiğinde adı taranır."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2202
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When adding d&irectories via drag && drop/copy && paste:"
-msgstr "&Sürükle ve bırak/kopyala ve yapıştır aracılığıyla dosyalar eklenirken:"
+msgstr "Sürükle ve bırak/kopyala ve yapıştır aracılığıyla d&izinler eklenirken:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2200
 #, no-c-format
@@ -15079,19 +15079,19 @@ msgid "When the user adds such a file the track's language input is set to the l
 msgstr "Kullanıcı böyle bir dosya eklediğinde, izin dil girdisi kaynak dosyadan gelen dil özelliğine ayarlanır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:441
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When the user drags & drops directories from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "Kullanıcı dosyaları çoklama aracı üzerindeki harici bir uygulamadan sürükleyip ve bıraktığı zaman GKA farklı eylemler gerçekleştirebilir."
+msgstr "Kullanıcı dizinleri çoklama aracı üzerindeki harici bir uygulamadan sürüklediği ve bıraktığı zaman GKA farklı eylemler gerçekleştirebilir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:565
 #, no-c-format
 msgid "When the user drags & drops files from an external application onto a header editor tab the GUI can take different actions."
-msgstr "Kullanıcı dosyaları harici bir uygulamadan üstbilgi düzenleyici sekmesi üzerine sürükleyip ve bıraktığı zaman GKA farklı eylemler gerçekleştirebilir."
+msgstr "Kullanıcı dosyaları harici bir uygulamadan üstbilgi düzenleyici sekmesi üzerine sürüklediği ve bıraktığı zaman GKA farklı eylemler gerçekleştirebilir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:430
 #, no-c-format
 msgid "When the user drags & drops files from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "Kullanıcı dosyaları çoklama aracı üzerindeki harici bir uygulamadan sürükleyip ve bıraktığı zaman GKA farklı eylemler gerçekleştirebilir."
+msgstr "Kullanıcı dosyaları çoklama aracı üzerindeki harici bir uygulamadan sürüklediği ve bıraktığı zaman GKA farklı eylemler gerçekleştirebilir."
 
 #: src/mkvtoolnix-gui/forms/main_window/prefs_run_program_widget.h:330
 #, no-c-format
@@ -15393,7 +15393,7 @@ msgstr "Varolan bir dosyayı seçmek zorundasınız."
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:137
 #, no-c-format
 msgid "You've dragged & dropped or copied & pasted at least one directory. There are several ways to handle them:"
-msgstr ""
+msgstr "En az bir dizini sürüklediniz ve bıraktınız ya da kopyaladınız ve yapıştırdınız. Bunları ele almanın birkaç yolu vardır:"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
