program translations: update Chinese Simplified (Singapore)

--- a/po/zh_SG.po
+++ b/po/zh_SG.po
@@ -1736,9 +1736,9 @@ msgid "&Copy command line to clipboard"
 msgstr "复制命令行到剪贴板(&C)"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:139
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Create a new multiplex settings tab for each directory"
-msgstr "为每个文件新建一个混流设置标签页"
+msgstr "为每个目录新建一个混流设置标签页(&C)"
 
 #: src/mkvtoolnix-gui/merge/tab.cpp:508
 #, no-c-format
@@ -1872,7 +1872,7 @@ msgstr "生成子章节(&G)"
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:138
 #, no-c-format
 msgid "&Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "将所有目录中的全部文件视为同一组文件进行处理(&H)"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:672
 #, no-c-format
@@ -3364,9 +3364,9 @@ msgstr "添加章节文件"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:135
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:136
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Adding directories via drag & drop or copy & paste"
-msgstr "通过拖放或复制/粘贴添加文件"
+msgstr "通过拖放或复制/粘贴添加目录"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2199
 #, no-c-format
@@ -5060,9 +5060,9 @@ msgid "Create a WebM compliant file."
 msgstr "创建符合 WebM 规范的文件。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:797
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Create a new multiplex settings tab for each directory"
-msgstr "为每个文件新建一个混流设置标签页"
+msgstr "为每个目录新建一个混流设置标签页"
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:224
 #, no-c-format
@@ -6767,7 +6767,7 @@ msgstr "要获取文件/剪辑链接和本功能的详细说明，请阅读 mkvm
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:49
 #, no-c-format
 msgid "For each directory a new multiplex settings tab can be created. All files from that directory will be added to this new tab. The configuration about dragging & dropping/copying & pasting files is ignored in this case."
-msgstr ""
+msgstr "可以为每个目录创建一个新的混流设置标签页。同一个目录中的所有文件都将被添加到新建的标签页中。在这种情况下，会忽略关于拖放或复制/粘贴动作的配置。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:385
 #, no-c-format
@@ -7032,7 +7032,7 @@ msgstr "HEVC/H.265 基本流"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:796
 #, no-c-format
 msgid "Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "将所有目录中的全部文件视为同一组文件进行处理"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:444
 #, no-c-format
@@ -12949,7 +12949,7 @@ msgstr "进程将中止。"
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:48
 #, no-c-format
 msgid "The program can collect all files from all directories in a single list. What happens with that list is determined by how dragging & dropping/copying & pasting files is configured."
-msgstr ""
+msgstr "程序可以将所有目录中的全部文件收集为单个完整列表。对该列表的处理行为取决于您对拖放或复制/粘贴动作的配置。"
 
 #: src/mkvtoolnix-gui/util/settings.cpp:295
 #, no-c-format
@@ -14946,9 +14946,9 @@ msgid "When a file is added its name is scanned."
 msgstr "当文件被添加时，其文件名会被扫描。"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2202
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When adding d&irectories via drag && drop/copy && paste:"
-msgstr "通过拖放以及复制/粘贴添加文件时(&D):"
+msgstr "通过拖放或复制/粘贴添加目录时(&I):"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2200
 #, no-c-format
@@ -14996,19 +14996,19 @@ msgid "When the user adds such a file the track's language input is set to the l
 msgstr "用户添加此类文件时，轨道语言讯息将从输入文件的语言属性中获取。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:441
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When the user drags & drops directories from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "当用户从外部程序中拖放文件到混流工具时，程序可以进行不同的操作。"
+msgstr "当用户将目录从外部应用程序拖放到 ｢混流工具｣ 时，GUI 程序可以执行不同的操作。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:565
 #, no-c-format
 msgid "When the user drags & drops files from an external application onto a header editor tab the GUI can take different actions."
-msgstr "当用户将文件从外部应用程序拖放到头部编辑器标签页时，GUI 可以执行不同的操作。"
+msgstr "当用户将文件从外部应用程序拖放到 ｢头部编辑器｣ 标签页时，GUI 可以执行不同的操作。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:430
 #, no-c-format
 msgid "When the user drags & drops files from an external application onto the multiplex tool the GUI can take different actions."
-msgstr "当用户从外部程序中拖放文件到混流工具时，程序可以进行不同的操作。"
+msgstr "当用户将文件从外部应用程序拖放到 ｢混流工具｣ 时，GUI 程序可以执行不同的操作。"
 
 #: src/mkvtoolnix-gui/forms/main_window/prefs_run_program_widget.h:330
 #, no-c-format
@@ -15310,7 +15310,7 @@ msgstr "您必须选择现有文件。"
 #: src/mkvtoolnix-gui/forms/merge/adding_directories_dialog.h:137
 #, no-c-format
 msgid "You've dragged & dropped or copied & pasted at least one directory. There are several ways to handle them:"
-msgstr ""
+msgstr "您刚刚将至少一个目录拖放或复制/粘贴到这里。本程序提供以下处理方式:"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
