man page translations: update French

--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -41,10 +41,8 @@ msgstr "70.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-05-22"
 msgid "2022-08-14"
-msgstr "2022-05-22"
+msgstr "14-08-2022"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -2996,17 +2994,13 @@ msgstr "Si &mkvmerge; détecte incorrectement qu'un fichier <abbrev>AAC</abbrev>
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1637
-#, fuzzy
-#| msgid "<option>--timestamps</option> <parameter>TID:file-name</parameter>"
 msgid "<option>--audio-emphasis</option> <parameter>TID:n|symbolic-name</parameter>"
-msgstr "<option>--timestamps</option> <parameter>TID:file-name</parameter>"
+msgstr "<option>--audio-emphasis</option> <parameter>TID:n|symbolic-name</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1640
-#, fuzzy
-#| msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or one of these keywords:"
 msgid "Sets the emphasis for the audio track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> (certain values between <constant>0</constant> and <constant>16</constant>) or a symbolic name. All valid numbers &amp; symbolic names can be listed with the <link linkend=\"mkvmerge.description.list_audio_emphasis\"><option>--list-audio-emphasis</option> option</link>."
-msgstr "Définit le mode stéréo pour la piste vidéo avec l'ID de piste <parameter>TID</parameter>. Le mode peut soit être un nombre <parameter>n</parameter> entre <constant>0</constant> et <constant>14</constant> soit l'un de ces mots clés :"
+msgstr "Définit l'accentuation pour la piste audio avec l'ID de piste <parameter>TID</parameter>.  Le mode peut soit être un nombre <parameter>n</parameter> (certaines valeurs entre <constant>0</constant> et <constant>16</constant>) soit un nom symbolique. Tous les nombres et noms valides peuvent être listés avec l'option <link linkend=\"mkvmerge.description.list_audio_emphasis\"><option>--list-audio-emphasis</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1649
@@ -3412,17 +3406,13 @@ msgstr "<constant>0</constant>: progressif ; <constant>1</constant>: entrelacé 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2067
-#, fuzzy
-#| msgid "<option>--stereo-mode</option> <parameter>TID:n|keyword</parameter>"
 msgid "<option>--stereo-mode</option> <parameter>TID:n|symbolic-name</parameter>"
-msgstr "<option>--stereo-mode</option> <parameter>TID:n|keyword</parameter>"
+msgstr "<option>--stereo-mode</option> <parameter>TID:n|symbolic-name</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2070
-#, fuzzy
-#| msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or one of these keywords:"
 msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or a symbolic name. All valid numbers &amp; names can be listed with the <link linkend=\"mkvmerge.description.list_stereo_modes\"><option>--list-stereo-modes</option> option</link>."
-msgstr "Définit le mode stéréo pour la piste vidéo avec l'ID de piste <parameter>TID</parameter>. Le mode peut soit être un nombre <parameter>n</parameter> entre <constant>0</constant> et <constant>14</constant> soit l'un de ces mots clés :"
+msgstr "Définit le mode stéréo pour la piste vidéo avec l'ID de piste <parameter>TID</parameter>.  Le mode peut soit être un nombre <parameter>n</parameter> entre <constant>0</constant> et <constant>14</constant> soit un nom symbolique. Tous les nombres et noms valides peuvent être listés avec l'option <link linkend=\"mkvmerge.description.list_stereo_modes\"><option>--list-stereo-modes</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:2080
@@ -3496,10 +3486,8 @@ msgstr "Le format <literal>json</literal> génère une représentation JSON lisi
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2150
-#, fuzzy
-#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
 msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v17.json\"><literal>mkvmerge-identification-output-schema-v17.json</literal></ulink>"
-msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
+msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v17.json\"><literal>mkvmerge-identification-output-schema-v17.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2154
@@ -3523,17 +3511,13 @@ msgstr "Si les pistes sont connues pour être présentes mais non trouvées, alo
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2178
-#, fuzzy
-#| msgid "<option>--list-languages</option>"
 msgid "<option>--list-audio-emphasis</option>"
-msgstr "<option>--list-languages</option>"
+msgstr "<option>--list-audio-emphasis</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2181
-#, fuzzy
-#| msgid "Lists all languages and their ISO 639-2 code which can be used with the <link linkend=\"mkvmerge.description.language\"><option>--language</option></link> option."
 msgid "Lists all valid numbers &amp; their corresponding symbolic names for the <link linkend=\"mkvmerge.description.audio_emphasis\"><option>--audio-emphasis</option></link> option."
-msgstr "Liste toutes les langues et leurs codes ISO 639-2 qui peuvent être utilisées avec l'option <link linkend=\"mkvmerge.description.language\"><option>--language</option></link>."
+msgstr "Liste tous les nombres valides et leurs noms symboliques correspondants pour l'option <link linkend=\"mkvmerge.description.audio_emphasis\"><option>--audio-emphasis</option></link> option."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2188
@@ -3547,17 +3531,13 @@ msgstr "Liste toutes les langues et leurs codes ISO 639-2 qui peuvent être util
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2198
-#, fuzzy
-#| msgid "<option>--gui-mode</option>"
 msgid "<option>--list-stereo-modes</option>"
-msgstr "<option>--gui-mode</option>"
+msgstr "<option>--list-stereo-modes</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2201
-#, fuzzy
-#| msgid "Lists all languages and their ISO 639-2 code which can be used with the <link linkend=\"mkvmerge.description.language\"><option>--language</option></link> option."
 msgid "Lists all valid numbers &amp; their corresponding symbolic names for the <link linkend=\"mkvmerge.description.stereo_mode\"><option>--stereo-mode</option></link> option."
-msgstr "Liste toutes les langues et leurs codes ISO 639-2 qui peuvent être utilisées avec l'option <link linkend=\"mkvmerge.description.language\"><option>--language</option></link>."
+msgstr "Liste tous les nombres valides et leurs noms symboliques correspondants pour l'option <link linkend=\"mkvmerge.description.stereo_mode\"><option>--stereo-mode</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2208
